// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SITEMAP_UPLOADER_TARGET=preprod kosko generate --prod jobs/sitemap-uploader 1`] = `
"---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod2
    app.gitlab.com/env.name: prod2
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/update-strategy: fallback-on-replace
  labels:
    application: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-preprod
  name: sitemap-uploader-preprod
  namespace: cdtn-admin
spec:
  backoffLimit: 3
  template:
    metadata:
      name: sitemap-uploader-preprod
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod2
        app.gitlab.com/env.name: prod2
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        kapp.k14s.io/deploy-logs: for-new-or-existing
      labels:
        application: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-preprod
    spec:
      restartPolicy: OnFailure
      containers:
        - name: az-sitemap-uploader
          image: mcr.microsoft.com/azure-cli:2.9.1
          command:
            - bash
          args:
            - '-c'
            - |+

              echo \\"Fetch sitemap from $SITEMAP_ENDPOINT?baseurl=$BASE_URL\\"

              curl --fail -L $SITEMAP_ENDPOINT?baseurl=$BASE_URL -o sitemap.xml

              if [[ -f sitemap.xml ]]; then
                # upload
                echo \\"Upload sitemap to azure/$DESTINATION_CONTAINER/$DESTINATION_NAME\\"
                az storage blob upload --account-name $AZ_ACCOUNT_NAME --account-key $AZ_ACCOUNT_KEY --container-name $DESTINATION_CONTAINER --file sitemap.xml --name $DESTINATION_NAME
              else
                echo \\"Cannot fetch sitemap.xml, abort\\"
                exit 1
              fi

          env: []
          envFrom:
            - configMapRef:
                name: sitemap-uploader-preprod
            - secretRef:
                name: sitemap-uploader-preprod
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: sitemap-uploader-preprod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod2
    app.gitlab.com/env.name: prod2
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-preprod
spec:
  encryptedData:
    AZ_ACCOUNT_KEY: >-
      AgCUoUtuRG5U38xEYpHtIP1qhXrgWPLSX3oRwLmZd9NduX1ZthgEHcdGXDiAPRA+KlLIgNrWzef+mOORXZrcktdtBQyYuxFUYuWrOefQADsCo37TrxReE2ogbpWBjfdnSrF4ITU5OuMXHaYW+APDd/FBX1ZcqSoQl2R+0EmwnBA5NOxZ6NbrIiQYo7sjUmUayIG+4GoTuYF9t4dCnhQ0g8/HM/Sx6NpYmUhsuFyQGWiUgVsyF8wSNL1f+vFVwVraREocaOFFl3YMWwyKha32R2skI8IQAyWrjeNH64zWQeTN46IMJF16MheF295G7hIkwIYsTy1MNnsfajWuW2fI4+NYD044LeGA/o+05Oz2fb634ikrShhAD1EO3Uf05GHCXfeYkFDjt8hMxV1LQxjqfUS4JcGC9Vcgb0XjhJ+Z1+HOaWAu1GaRgdtBpwpFib2M5p7Frj6zmjc2uFhrbfs/s+YuIcPyTcAXlLB8usZZePupweEHkuhqH1parzv0Tn46y5JZ1EBrxN1Fx6YQOpnK4HG20LZGNR9VeSXTM4I1Lo3sY78G4MHvpOt/J7Y0BoitRaFLuDlE4tLZh9FeRlbuZb1ZSOkYbqOGlyZj3JSABiWwMr0q2iFG/ibwLl3vBd/0A64rLj6lTAM5Vvc9EP6XCiqXzhXKX2wqS76dQbu3FQFxMNtlunNDfKfO0JEBlCC5MAwRCRj4ETUaCu74+sWBU9gNXQC6PW5Dh/Z3lHMFkfjRzYDXEBsn8nGnWLob3U+Ua9/8Jo6kJlA37oMRwW3WglYGsYS2fsV0tc28uE3eE+wmyvZpG+9QaNX5
    AZ_ACCOUNT_NAME: >-
      AgBz5scSSSJb3Ja9dFq/24jE/qi4KCbS3bpS6duDRbaSBKbDVbxymSJyIy3WoiCqYINyD1PJwxI4n8up6N0VoMn+aB9JGARbZZpu4tbh06kCpQJNNVFEn5zWmYz/PetdsW0zUK67EQSUx8lJ9ATAFsB/BsrJQF+hDLiseEen5pkPBQPVUhMXLAZPousnMZlcjpa5gD+d1AB/Q7gbUGkxkYCuYUIX28M8A1Zj3uMxT2nxE9gf02BYqfoei+p/4CrIbwZIGncg/gk3ROXCJXWEMCRGV9dAAghWl5mkAaaSoJPzVedp+W86TttWsY6cPj4+LWkHNpQ3eP0bRziZ8IdtS2H4CfJ8wtg+XK9oFguGvWyh74+fL1QAhLKOXW1VfyJcrROD9SsifT9EtvxiRgWzufR3E/cU5s14t1ocTC1TR/wwL/0cC/D1vGNOsl1WsIe6uFI2Tb+XCqCi4wSmBK//5SKWUDvPR51XdMbcp6GKCRZQ3GzOTemrtT1ssZZjMYWCO2vd8DwFyaOWjZXux4aovBrXBgJnJRvqkT2czDwk2fd5ykqHPMROT7CvUKrkRQpKmV4K9jtVAGHBM2o10QHWtUdbNoxOiUeqH7etpzm1RGptDWV2i9Xr/XGuCB5UuucU56I5RbJFp+zVSYAm1X7UxQw16aeYnpajtRsdZnhvcdXQS8xCDnovwVdQFmUw0CFXQeQzZbof9f3z7zQootM=
  template:
    metadata:
      name: sitemap-uploader-preprod
      namespace: cdtn-admin
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod2
        app.gitlab.com/env.name: prod2
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        application: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-preprod
    type: Opaque
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: sitemap-uploader-preprod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod2
    app.gitlab.com/env.name: prod2
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-preprod
data:
  BASE_URL: https://preprod-code-travail.dev2.fabrique.social.gouv.fr
  DESTINATION_CONTAINER: sitemap
  DESTINATION_NAME: sitemap-preprod.xml
  SITEMAP_ENDPOINT: http://www/api/sitemap
"
`;

exports[`SITEMAP_UPLOADER_TARGET=prod kosko generate --prod jobs/sitemap-uploader 1`] = `
"---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod2
    app.gitlab.com/env.name: prod2
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/update-strategy: fallback-on-replace
  labels:
    application: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-prod
  name: sitemap-uploader-prod
  namespace: cdtn-admin
spec:
  backoffLimit: 3
  template:
    metadata:
      name: sitemap-uploader-prod
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod2
        app.gitlab.com/env.name: prod2
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        kapp.k14s.io/deploy-logs: for-new-or-existing
      labels:
        application: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-prod
    spec:
      restartPolicy: OnFailure
      containers:
        - name: az-sitemap-uploader
          image: mcr.microsoft.com/azure-cli:2.9.1
          command:
            - bash
          args:
            - '-c'
            - |+

              echo \\"Fetch sitemap from $SITEMAP_ENDPOINT?baseurl=$BASE_URL\\"

              curl --fail -L $SITEMAP_ENDPOINT?baseurl=$BASE_URL -o sitemap.xml

              if [[ -f sitemap.xml ]]; then
                # upload
                echo \\"Upload sitemap to azure/$DESTINATION_CONTAINER/$DESTINATION_NAME\\"
                az storage blob upload --account-name $AZ_ACCOUNT_NAME --account-key $AZ_ACCOUNT_KEY --container-name $DESTINATION_CONTAINER --file sitemap.xml --name $DESTINATION_NAME
              else
                echo \\"Cannot fetch sitemap.xml, abort\\"
                exit 1
              fi

          env: []
          envFrom:
            - configMapRef:
                name: sitemap-uploader-prod
            - secretRef:
                name: sitemap-uploader-prod
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: sitemap-uploader-prod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod2
    app.gitlab.com/env.name: prod2
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-prod
spec:
  encryptedData:
    AZ_ACCOUNT_KEY: >-
      AgAywZ1uryjSCfAcwhbVllW311wJpBkh6tKecqJu1F204kFR8baPTVRoUh3PsaR5hVvuu/EUExeMXTJFey+WxAq3lPXIQ7K6aa+T8+jUkXU1Sj2EvHitHFWuGSOyFphhhGlAAoykaZcvOAqYrW8CDe2Yh84bxWP1GraJpySwOpaBj4Fkjz3Xe4MOQtD7KmXqdoMHCQBI6PFhHIiTt1/6Mgk+G99BarA/vMNelCZm5Gb8g5dzaSodYeZw4Bo0tK6B+cyEtflHh8z4oGV96sK+CFm6RPkAeysLz8eNgNCvMjRC0Dp4q9k3WJSZLPav/DX/Xaf8mzdavrA3v8YLL52ypovoZYF/VSloi0cnHN61IPhHIRkiCcPKUqqqsGYsVRNLJyfGBS/LhAJ+prHeP6IGTZ9V7R1x1Z5WsmTpSts4jQf91TjI2+m3O50l7KDHSmfPozcm/A9VDVAajuVtq4tgoDsbJQ0+Ay2aydUGw03Qr11HVV9Ao6Qap0JL3Fn+lNCFZgvgLXocBuqfpq2zrm7HPq+fQbtYgr+dwNyHe7AVXSyBD7/TJkw5UDcK3L501UiLChd3oiy3x/efUA6CPIKlx4GbEt+n2Ga3zHTx+BWQnss0LX1CuYCyow8X68p70O4m4XZpL30HCYL43hHlNls0p5Dr4lI/jHbjqEv5KtGNvwZiZpfJdeMTWlQ9X9+Ojlj57FL4oQmbQw5mJCu5AwlE7jZyajhHnME/NSp8NYQUp4Yg+1WoyA0kmDAF/eiKEcGiogdygC2tgEP2EEdcTyw7g+0PDtlRUxXb39CrBY3Bo+p+UNBoHLtzSMTQ
    AZ_ACCOUNT_NAME: >-
      AgBI8F/PBFJqcSRe9Ley7zWRHIsNX8oh8lHUgotVclONIIj5kadK4lIJMjh1LjPM5VMsrv/3AviY9+Tnv7078/IVyZO9kRzgQ0hIuw6LptkhS0KuiFQYAmZxlJ/shjgL1awbJmyF5g6gzmSbTQQ4CYqPK5TPCMuNH9EwTipHTQkSdZTi+9KSfpmPhfozgAapfwb07L+/gEVL8UQApao7MnyW7LLOEnVSUM6tr/hRXvFJomZCOcU98+F6FE1C4eNLEmF0XVdCY8HVkkPAesq8XjABoHon2PraglrJnngXen243KR8XnNKwS1QQcnAOvzd8hQFhsTTU0GUSblJYkvuHsa2WbAAD2plDEDCt5jt+nJW3ii7fbxoNlxJYoaLzqiH9sciXFAl73Ky/A75+ZGZL8Nw18H2cz39pbMw5LGPMuLX1R5EfW8SugrWdeWa55tuV+UfNpih6PWXAyNvv+JpSzWBARrsrrLCZSglHwkZXU6ZuoKe6X1xriHmU0EvIQXMBBSHwOet6RoAllL+O7gLrlJFH5/fA0G4fcRr1XgONHsNLQ69AKHFv+hzzYyV1plU/wMZ9QCNcUswC+DDOh2+1T0yASB8Z/17SwBjE2KdJEO8qRplNDRnuREmsQRJsqiaWIsMPwdOntp8dC5UCkYj9dtz+QGHFmdxAg3MLUB46jN4bTn3P0UiuQXw03SRlYKnKSC6/NfAkZfJjWfrlguC
  template:
    metadata:
      name: sitemap-uploader-prod
      namespace: cdtn-admin
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod2
        app.gitlab.com/env.name: prod2
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        application: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-prod
    type: Opaque
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: sitemap-uploader-prod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod2
    app.gitlab.com/env.name: prod2
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-prod
data:
  BASE_URL: https://code.travail.gouv.fr
  DESTINATION_CONTAINER: sitemap
  DESTINATION_NAME: sitemap.xml
  SITEMAP_ENDPOINT: http://www/api/sitemap
"
`;
